@@ -53,7 +53,7 @@ module ElasticAPM
             if ElasticAPM.agent.config.capture_elasticsearch_queries
               unless args[1].nil? || args[1].empty?
                 statement << {
-                  body: ElasticAPM::Spies::ElasticsearchSpy.sanitizer.strip_from!(args[1])
+                  body: ElasticAPM::Spies::ElasticsearchSpy.sanitizer.strip_from(args[1])
                 }
               end
             end
